Fix: Codeblocks overflowing and breaking page style

--- a/styles/components/CodeBlock.module.scss
+++ b/styles/components/CodeBlock.module.scss
@@ -19,6 +19,7 @@
   white-space: pre;
   margin-right: vars.$unit;
   line-height: 1.5rem;
+  overflow-x: scroll;
 }
 .check {
   & * {
